tests/cases/conformance/es6/yieldExpressions/YieldExpression20_es6.ts
// @target: es6

function* test() {
  return () => ({
    b: yield 2, // error
  });
}
